NEWS since Mercury release 0.8:
-------------------------------
